# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "app-model"
description = "Generic application schema implemented in python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [{ email = "talley.lambert@gmail.com" }, { name = "Talley Lambert" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]
dynamic = ["version"]
dependencies = ['psygnal', 'pydantic', 'in-n-out>=0.1.5', 'typing_extensions']

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]
test-qt = ["pytest-qt", "fonticon-fontawesome6"]
qt = ["qtpy", "superqt"]
dev = [
    "black",
    "ipython",
    "isort",
    "mypy",
    "pdbpp",
    "pre-commit",
    "pydocstyle",
    "pytest-cov",
    "pytest",
    "rich",
]
docs = [
    "griffe==0.22.0",
    "mkdocs-material~=8.3",
    "mkdocs-minify-plugin==0.5.0",
    "mkdocs==1.3.0",
    "mkdocstrings-python==0.7.0",
    "mkdocstrings==0.19.0",
    "mkdocs-macros-plugin==0.7.0",
    "typing_extensions>=4.0",
]

[project.urls]
homepage = "https://github.com/pyapp-kit/app-model"
repository = "https://github.com/pyapp-kit/app-model"

[tool.hatch.version]
source = "vcs"

# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
src_paths = ["src/app_model", "tests"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
target-version = "py38"
line-length = 88
extend-select = ["D", "M001"]
extend-ignore = [
    "D100",
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "E501"]
"demo/*" = ["D"]
"docs/*" = ["D"]
"src/app_model/_registries.py" = ["D10"]
"src/app_model/context/_expressions.py" = ["D10"]
"src/app_model/types/_keys/*" = ["E501"]


# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = ["error", "ignore:QPixmapCache.find:DeprecationWarning:"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/*.py"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["qtpy.*"]
implicit_reexport = true

[tool.coverage.run]
source = ["app_model"]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "pass",
]
skip_covered = true
show_missing = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "tests/**/*",
    "codecov.yml",
    "demo/**/*",
    "docs/**/*",
    ".readthedocs.yaml",
    "mkdocs.yml",
    "CHANGELOG.md",
    ".ruff_cache/**/*",
]
